syntax = "proto3";

package api;

service User {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}

    rpc UpdateUserIsPaid(UpdateUserIsPaidRequest) returns (UpdateUserIsPaidResponse) {}
    rpc GetUserByToken(GetUserByTokenRequest) returns (GetUserByTokenResponse) {}
}

message UpdateUserIsPaidRequest {
    int32 id = 1;
    bool is_paid = 2;
}

message UpdateUserIsPaidResponse {
    int32 id = 1;
    string email = 2;
    string name = 3;
    bool is_paid = 4;
    string token = 5;
}


message RegisterRequest {
    string email = 1;
    string pwd = 2;
    string name = 3;
}

message RegisterResponse {
    int32 id = 1;
    string token = 2;
    string name = 3;
    string email = 4;
    bool is_paid = 5;
}

message GetUserByTokenRequest {
    string token = 1;
}

message GetUserByTokenResponse {
    int32 id = 1;
    string email = 2;
    string name = 3;
    bool is_paid = 4;
    string token = 5;
}

message LoginRequest {
    string email = 1;
    string pwd = 2;
}

message LoginResponse {
    string token = 1;
}